<resources>
    <string name="app_name">RIDE</string>
    <string name="nombre_app">TRANSPORTE UNIVERSITARIO</string>
    <string name="txt_carnet">Carnet:</string>
    <string name="hint_input_carne">Introduzca su número de carnet</string>
    <string name="hint_carne_login">Ingrese su carnet universitario</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="hint_ingresecontra">Ingrese su contraseña</string>
    <string name="txt_ingresar_login">Ingresar</string>
    <string name="txt_usunew">¿No tienes cuenta?</string>
    <string name="txt_login_registrarte">Crea tu cuenta</string>
    <string name="app_name_oficcial">TRANSPORTE UNIVERSITARIO</string>
    <string name="txt_correo_inst">Escriba correo institucional:</string>
    <string name="txt_nombres_register">Nombres:</string>
    <string name="txt_apellidos_register">Apellidos:</string>
    <string name="txt_fecha_cumple_register">Tu fecha de cumpleaños:</string>
    <string name="txt_escribircel_register">Número de celuar:</string>
    <string name="txt_ingresecontra_register">Ingrese una contraseña:</string>
    <string name="txt_registrarse_register">Registrarse</string>
    <string name="txtx_olvidarcontra_login">¿Olvidaste tu contraseña?</string>
    <string name="txt_emailwriting_forgotpass">Escribe tu email para restablecer contraseña:</string>
    <string name="txt_enviar_fp">Enviar</string>
    <string name="txt_welcome">BIENVENID@</string>
    <string name="txt_whatareu">¿Qué eres hoy?</string>
    <string name="txt_cerrarsesion">Cerrar sesión</string>
    <string name="txt_littleexplanation">A una nueva experiencia de viajar</string>
    <string name="cliente">Cliente_txt</string>
    <string name="cliente_txt">Cliente</string>
    <string name="conductor_txt">Conductor</string>
    <string name="title_activity_conductor_map">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menú</string>
    <string name="nav_header_subtitle">exampleclient@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_activity_label">ClientActivity</string>
    <string name="txt_logout">Cerrar sesión</string>
</resources>
