<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cliente_txt"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="@dimen/big_size"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_user" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_carnetlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <EditText
            android:id="@+id/et_carne_login"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Correo institucional"
            android:inputType="textEmailAddress"
            android:backgroundTint="#008577"
            android:textColor="#FFFF"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_passlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pass_login"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#008577"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="#FFFF"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="#FFFFFF"
            android:textColorLink="@android:color/white"
            android:textCursorDrawable="@android:color/white" />



    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_ingresar_login"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_dimens"
        android:layout_gravity="center"
        android:onClick="signin"
        android:text="@string/txt_ingresar_login"
        android:background="@drawable/btn_redondo"
        android:textColor="#ffff"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_dimens"
        android:onClick="forgotPassword"
        android:gravity="right"
        android:text="@string/txtx_olvidarcontra_login"
        android:textColor="#FFFf"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_dimens"
        android:onClick="register"
        android:gravity="right"

        android:text="¿No tienes cuenta? Regístrate acá"
        android:textColor="#FFFF"
        />

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>




</LinearLayout>